WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
232244
Regression (
r284330
): [ macOS wk1 Debug ] webaudio/AudioBuffer/huge-buffer.html is a flaky timeout
https://bugs.webkit.org/show_bug.cgi?id=232244
Summary
Regression (r284330): [ macOS wk1 Debug ] webaudio/AudioBuffer/huge-buffer.ht...
ayumi_kojima
Reported
2021-10-25 09:09:43 PDT
webaudio/AudioBuffer/huge-buffer.html Is flaky timing out on macOS wk1 Debug. History:
https://results.webkit.org/?suite=layout-tests&test=webaudio%2FAudioBuffer%2Fhuge-buffer.html
Result page:
https://build.webkit.org/results/Apple-BigSur-Debug-WK1-Tests/r284777%20(4952)/results.html
# Diff: --- /Volumes/Data/worker/bigsur-debug-tests-wk1/build/layout-test-results/webaudio/AudioBuffer/huge-buffer-expected.txt +++ /Volumes/Data/worker/bigsur-debug-tests-wk1/build/layout-test-results/webaudio/AudioBuffer/huge-buffer-actual.txt @@ -1,3 +1,4 @@ +FAIL: Timed out waiting for notifyDone to be called PASS # AUDIT TASK RUNNER STARTED. PASS Executing "huge buffer"
Attachments
Patch
(4.56 KB, patch)
2021-11-02 14:18 PDT
,
Robin Morisset
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-10-25 09:10:26 PDT
<
rdar://problem/84616427
>
ayumi_kojima
Comment 2
2021-10-25 09:13:55 PDT
According to the history, the test was only taking less than 1 second to run before
r284330
, but it started taking 29+ second after the change.
ayumi_kojima
Comment 3
2021-10-25 09:17:31 PDT
Marked test expectations
https://trac.webkit.org/changeset/284787/webkit
Robin Morisset
Comment 4
2021-11-02 14:18:01 PDT
Created
attachment 443132
[details]
Patch
Robin Morisset
Comment 5
2021-11-02 18:21:35 PDT
Comment on
attachment 443132
[details]
Patch thanks Yusuke for the review.
EWS
Comment 6
2021-11-02 18:27:34 PDT
Committed
r285191
(
243819@main
): <
https://commits.webkit.org/243819@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 443132
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug