Regression (r284330): [ macOS wk1 Debug ] webaudio/AudioBuffer/huge-buffer.html is a flaky timeout https://bugs.webkit.org/show_bug.cgi?id=232244 <rdar://problem/84616427>

Reviewed by Yusuke Suzuki.

Source/WebCore:

The test is verifying that trying to allocate an AudioBuffer with 4GB channels fails cleanly.
It used to work automatically, as AudioBuffer relies on Float32Array under the hood, which was limited to 2GB.
Since r284330, ArrayBuffers can be up to 4GB, so it now takes very long to OOM, and sometimes timeout.
I use the same solution which I used for PixelBuffers in r284330: just test that the length is reasonable
and if it is not then abort as if the allocation of the Float32Array had failed.

No new tests: covered by LayoutTests/webaudio/AudioBuffer/huge-buffer.html

* Modules/webaudio/AudioBuffer.cpp:
(WebCore::AudioBuffer::AudioBuffer):
* Modules/webaudio/AudioBuffer.h:

LayoutTests:

* platform/mac-wk1/TestExpectations:



Canonical link: https://commits.webkit.org/243819@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285191 268f45cc-cd09-0410-ab3c-d52691b4dbfc